--- a/TP-01/docker-compose.yml
+++ b/TP-01/docker-compose.yml
@@ -14,6 +14,8 @@ services:
 
   tomcat-server:
     build: .
+    volumes:
+      - ./:/usr/local/tomcat/webapps/employee-manager
     ports:
       - "8888:8080"
     depends_on:
