--- a/TP-01/docker-compose.yml
+++ b/TP-01/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     build: .
     volumes:
       - ./:/usr/local/tomcat/webapps/employee-manager
+      - /usr/local/tomcat/webapps/employee-manager/WEB-INF/classes
     ports:
       - "8888:8080"
     depends_on:
